test/syntax/10-member_declaration-2-err.c
// ======================================================================

/* member_declaration -> type_specifier var LBRACKET num RBRACKET SEMICOLON */

// ======================================================================

struct human {
  char name[i];	// error: not num in [  ] 
} h1;

void main(void)
{

}

// ======================================================================
